<?xml version="1.0"?>
<package format="2">
  <name>kimera_multi</name>
  <version>0.0.1</version>
  <description>Kimera-Multi</description>

  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosunit</depend>
  <depend>rostest</depend>
</package>
